--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,5 +13,4 @@
 /* Sections style */
 @import url('./header.css');
 @import url('./index.css');
-@import url('./1-gallery.css');
-@import url('./2-form.css');
+@import url('./loader.css');
